# crowdstrikeoauth

./: .gitignore  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  CrowdStrike OAuth API.postman_collection.json  LICENSE  NOTICE  README.md  __init__.py  crowdstrike_assign_hosts.html  crowdstrike_command_output.html  crowdstrike_create_ioa_rule.html  crowdstrike_create_ioa_rule_group.html  crowdstrike_create_rule_group.html  crowdstrike_create_session.html  crowdstrike_delete_indicator.html  crowdstrike_delete_ioa_rule.html  crowdstrike_delete_ioa_rule_group.html  crowdstrike_delete_rule_group.html  crowdstrike_detonate_file.html  crowdstrike_detonate_url.html  crowdstrike_file_reputation.html  crowdstrike_get_alerts_details.html  crowdstrike_get_detections_details.html  crowdstrike_get_device_scroll.html  crowdstrike_get_indicator.html  crowdstrike_get_online_status.html  crowdstrike_get_user_roles.html  crowdstrike_get_zta_data.html  crowdstrike_hunt_view.html  crowdstrike_list_custom_indicators.html  crowdstrike_list_detections.html  crowdstrike_list_epp_alerts.html  crowdstrike_list_incident_behaviors.html  crowdstrike_list_incidents.html  crowdstrike_list_ioa_platforms.html  crowdstrike_list_ioa_rule_groups.html  crowdstrike_list_ioa_severities.html  crowdstrike_list_ioa_types.html  crowdstrike_list_rule_groups.html  (+21 more)
.github/workflows/: call-publish.yml  generate-doc.yml  linting.yml  package-app-dependencies.yml  review-release.yml  semgrep.yml  start-release.yml
release_notes/: 1.0.3.md  2.0.3.md  2.0.4.md  2.0.5.md  2.0.6.md  2.0.7.md  3.1.0.md  3.2.0.md  3.3.0.md  3.4.1.md  3.5.1.md  3.5.2.md  3.5.3.md  3.5.4.md  3.5.5.md  3.5.6.md  3.5.7.md  3.5.9.md  3.6.0.md  3.6.1.md  3.7.0.md  3.8.0.md  4.0.0.md  4.1.0.md  4.1.1.md  4.2.0.md  4.3.0.md  5.0.0.md  5.0.1.md  5.1.0.md  5.1.1.md  5.1.2.md  5.1.3.md  5.1.4.md  6.0.0.md  release_notes.html  unreleased.md
src/: __init__.py  app.py  consts.py  helper.py  parse_cs_events.py  parse_cs_incidents.py
src/actions/: __init__.py  _sandbox_common.py  assign_hosts.py  check_detonate_status.py  create_ioa_rule.py  create_ioa_rule_group.py  create_session.py  delete_ioa_rule.py  delete_ioa_rule_group.py  delete_iocs.py  delete_session.py  detonate_file.py  detonate_url.py  download_report.py  file_reputation.py  get_command_details.py  get_detections_details.py  get_device_detail.py  get_device_scroll.py  get_epp_alerts_details.py  get_incident_behaviors.py  get_incident_details.py  get_indicator.py  get_process_detail.py  get_role.py  get_session_file.py  get_user_roles.py  get_zta_data.py  hunt_domain.py  hunt_file.py  hunt_ip.py  list_alerts.py  list_crowdscores.py  list_custom_indicators.py  list_detections.py  list_epp_alerts.py  list_groups.py  list_incident_behaviors.py  list_incidents.py  list_ioa_platforms.py  (+28 more)
templates/: crowdstrike_command_output.html  crowdstrike_create_ioa_rule.html  crowdstrike_create_ioa_rule_group.html  crowdstrike_create_session.html  crowdstrike_delete_indicator.html  crowdstrike_delete_ioa_rule.html  crowdstrike_delete_ioa_rule_group.html  crowdstrike_detonate_file.html  crowdstrike_detonate_url.html  crowdstrike_file_reputation.html  crowdstrike_get_alerts_details.html  crowdstrike_get_detections_details.html  crowdstrike_get_device_scroll.html  crowdstrike_get_indicator.html  crowdstrike_get_user_roles.html  crowdstrike_get_zta_data.html  crowdstrike_host_group.html  crowdstrike_hunt_view.html  crowdstrike_list_custom_indicators.html  crowdstrike_list_detections.html  crowdstrike_list_epp_alerts.html  crowdstrike_list_incidents.html  crowdstrike_list_ioa_platforms.html  crowdstrike_list_ioa_rule_groups.html  crowdstrike_list_ioa_severities.html  crowdstrike_list_ioa_types.html  crowdstrike_list_users.html  crowdstrike_process_list_view.html  crowdstrike_set_status_view.html  crowdstrike_update_indicator.html  crowdstrike_update_ioa_rule.html  crowdstrike_update_ioa_rule_group.html  crowdstrike_url_reputation.html
tests/: test_download_report.py
wheels/: simplejson-3.17.2-cp36-cp36m-manylinux2010_x86_64.manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_17_x86_64.manylinux2014_x86_64.whl  simplejson-3.17.3-cp39-cp39-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_12_x86_64.manylinux2010_x86_64.whl
wheels/py3/: soupsieve-2.4-py3-none-any.whl  tenacity-8.1.0-py3-none-any.whl  urllib3-2.0.4-py3-none-any.whl
wheels/py313/: simplejson-3.17.2-cp313-cp313-manylinux1_x86_64.manylinux_2_28_x86_64.manylinux_2_5_x86_64.whl  simplejson-3.17.2-cp313-cp313-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_28_x86_64.whl
(+6 files in other folders)
